--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-markdown": "^9.0.3",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.0"
+    "typescript": "^5.7.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
