--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "@types/node": "^22.0.0",
+    "@uiw/react-md-editor": "^4.0.11",
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
